<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btn_back_button"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back_button"
        android:tint="@color/colorMateDarkBlue"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/forgot_password_title"
        android:textColor="@color/colorMateDarkBlue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/cirimg_forgot_pass"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_confuso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_create_account"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/txt_question_forgotpass_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_forgotpass_sms"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cirimg_forgot_pass"
        app:layout_constraintVertical_bias="0.04" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtilay_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/edittext_design"
        android:elevation="4dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_question_forgotpass_sms"
        app:layout_constraintVertical_bias="0.06"
        app:startIconDrawable="@drawable/ic_phone_android_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtiedt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_de_celular"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_try_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/text_try_email"
        android:textColor="@color/colorMateDarkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtilay_phone"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_design_login"
        android:text="@string/text_btn_reset_pass"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_try_email"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/txt_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txt_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>